--- a/cities.html
+++ b/cities.html
@@ -27,9 +27,10 @@
     <li>Vancouver (17,836,133)</li>
     <li>Shanghai (17,836,133)</li>
     <li>Istanbul (13,854,740)</li>
-    <li>Karachi (12,991,000)</li>
-    <li>Mumbai (12,478,447)</li>
-    <li>Calgary (2,000,000)</li>
+    <li>Karachi  (12,991,000)</li>
+    <li>Mumbai   (12,478,447)</li>
+    <li>Calgary    (2,000,000)</li>
+    <li>Toronto   (5,000,000)</li>
     <li>Burnaby (17,836,133)</li>
   </ol>
 
